@@ -1,2 +1,4 @@
+require 'recaptcha'
+
 ActionView::Base.send(:include, Recaptcha::ClientHelper)
 ActionController::Base.send(:include, Recaptcha::Verify)
