@@ -1,3 +1,6 @@
+# Generated by jeweler
+# DO NOT EDIT THIS FILE
+# Instead, edit Jeweler::Tasks in Rakefile, and run `rake gemspec`
 # -*- encoding: utf-8 -*-
 
 Gem::Specification.new do |s|
@@ -6,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Jason L. Perry"]
-  s.date = %q{2009-09-12}
+  s.date = %q{2009-09-14}
   s.description = %q{This plugin adds helpers for the ReCAPTCHA API }
   s.email = %q{jasper@ambethia.com}
   s.extra_rdoc_files = [
@@ -23,7 +26,9 @@ Gem::Specification.new do |s|
      "VERSION",
      "init.rb",
      "lib/recaptcha.rb",
-     "lib/recaptcha/recaptcha.rb",
+     "lib/recaptcha/client_helper.rb",
+     "lib/recaptcha/rails.rb",
+     "lib/recaptcha/verify.rb",
      "recaptcha.gemspec",
      "tasks/recaptcha_tasks.rake",
      "test/recaptcha_test.rb",
@@ -33,7 +38,7 @@ Gem::Specification.new do |s|
   s.rdoc_options = ["--charset=UTF-8"]
   s.require_paths = ["lib"]
   s.rubygems_version = %q{1.3.5}
-  s.summary = nil
+  s.summary = %q{Helpers for the ReCAPTCHA API}
   s.test_files = [
     "test/recaptcha_test.rb",
      "test/verify_recaptcha_test.rb"
